--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+    color: white;
 }
 
 body {
     display: flex;
     flex-direction: column;
+    background-color: #202b38;
 }
 
 .navBar {
@@ -41,8 +43,6 @@ main {
     text-align: center;
 }
 
-
-.btn {
-    height: 50px;
-    width: 50%;
+button {
+    background-color: #202b38;
 }
